# ZawuTech

./: .gitignore  main.py  pyproject.toml  requirements.txt
Template/static/: app.js  styles.css
Template/templates/: index.html
src/: app.py  database.py  models.py  schemas.py
